5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1592_1802.log
== TEST (2019-03-30 17:41:02) 
-- CODE:
a = int(input("Quais os pontos de vida iniciais"))
b = int(input("Valores sorteados?")
from math import*
dano = sqrt5*d1 + pi**d2/3
print(dano)
			 
		
-- ERROR:
File "XXXX", line 3
    from math import*
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:41:07) 
-- CODE:
a = int(input("Quais os pontos de vida iniciais"))
b = int(input("Valores sorteados?")
from math import*
dano = sqrt5*d1 + pi**d2/3
print(dano)
			 
		
-- EXECUTION TIME:
0.16404
-- ERROR:
  File "/home/codebench/codes/1592/1802/main.py", line 3
    from math import*
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 17:42:23) 
-- CODE:
d1 = int(input("Quais os pontos de vida iniciais"))
d2 = int(input("Valores sorteados?")
from math import*
dano = sqrt5*d1 + pi**d2/3
print(dano)
			 
		
-- ERROR:
File "XXXX", line 3
    from math import*
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:42:27) 
-- CODE:
d1 = int(input("Quais os pontos de vida iniciais"))
d2 = int(input("Valores sorteados?")
from math import*
dano = sqrt5*d1 + pi**d2/3
print(dano)
			 
		
-- EXECUTION TIME:
0.129563
-- ERROR:
  File "/home/codebench/codes/1592/1802/main.py", line 3
    from math import*
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:12:10) 
-- CODE:
d1 = int(input("dado1"))
var1 = int(input("pontos de vida?"))

d2 = int(input("dado2?")
from math import*
dano = ((5*d1)**(0.5)+(math.pi**(d2/3))
resto = var1 - dano
print(resto)
			 
		
-- ERROR:
File "XXXX", line 5
    from math import*
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:12:27) 
-- CODE:
d1 = int(input("dado1"))
var1 = int(input("pontos de vida?"))

d2 = int(input("dado2?")
import math
dano = ((5*d1)**(0.5)+(math.pi**(d2/3))
resto = var1 - dano
print(resto)
			 
		
-- ERROR:
File "XXXX", line 5
    import math
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:12:45) 
-- CODE:
d1 = int(input("dado1"))
var1 = int(input("pontos de vida?"))

d2 = int(input("dado2?"))
import math
dano = ((5*d1)**(0.5)+(math.pi**(d2/3))
resto = var1 - dano
print(resto)
			 
		
-- ERROR:
File "XXXX", line 7
    resto = var1 - dano
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:13:06) 
-- CODE:
d1 = int(input("dado1"))
var1 = int(input("pontos de vida?"))

d2 = int(input("dado2?"))
import math
dano = ((5*d1)**(0.5)+(math.pi**(d2/3))
resto = var1 - int(dano)
print(resto)
			 
		
-- ERROR:
File "XXXX", line 7
    resto = var1 - int(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:13:54) 
-- CODE:
d1 = int(input("dado1"))
var1 = int(input("pontos de vida?"))

d2 = int(input("dado2?"))
import math
a = ((5*d1)**(0.5)+(math.pi**(d2/3))
resto = var1 - int(a)
print(resto)
			 
		
-- ERROR:
File "XXXX", line 7
    resto = var1 - int(a)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:14:12) 
-- CODE:
d1 = int(input("dado1"))
var1 = int(input("pontos de vida?"))

d2 = int(input("dado2?"))
import math
a = ((5*d1)**(0.5)+(math.pi**(d2/3))
resto = var1 - int(a)
print(resto)
			 
		
-- ERROR:
File "XXXX", line 7
    resto = var1 - int(a)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:14:14) 
-- CODE:
d1 = int(input("dado1"))
var1 = int(input("pontos de vida?"))

d2 = int(input("dado2?"))
import math
a = ((5*d1)**(0.5)+(math.pi**(d2/3))
resto = var1 - int(a)
print(resto)
			 
		
-- EXECUTION TIME:
0.20124
-- ERROR:
  File "/home/codebench/codes/1592/1802/main.py", line 7
    resto = var1 - int(a)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:14:58) 
-- CODE:
import math
var1 = int(input("pontos de vida:"))
d1 = int(input("dado1:"))
d2 = int(input("dado:"))
import math
a = ((5*d1)**(0.5)+(math.pi**(d2/3))
resto = var1 - int(a)
print(resto)
			 
		
-- ERROR:
File "XXXX", line 7
    resto = var1 - int(a)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:15:40) 
-- CODE:
import math
var1 = int(input("pontos de vida:"))
d1 = int(input("dado1:"))
d2 = int(input("dado:"))
import math
a = ((5*d1)**(0.5)+(math.pi**(d2/3))
resto = var1 - int(a)
print(resto)
			 
		
-- ERROR:
File "XXXX", line 7
    resto = var1 - int(a)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:16:35) 
-- CODE:
import math
var1 = int(input("pontos de vida:"))
d1 = int(input("dado1:"))
d2 = int(input("dado:"))
import math
a = ((5*d1)**(0.5)+(math.pi**(d2/3))
resto =var1-int(a)
print(resto)
			 
		
-- ERROR:
File "XXXX", line 7
    resto =var1-int(a)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:20:12) 
-- CODE:
import math
var1 = int(input("pontos de vida:"))
d1 = int(input("dado1:"))
d2 = int(input("dado:"))
import math
a = ((5*d1)**(0.5)+(math.pi**(d2/3))
resto =var1-int(a)
print(resto)
			 
		
-- ERROR:
File "XXXX", line 7
    resto =var1-int(a)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:21:03) 
-- CODE:
import math
var1 = int(input("pontos de vida:"))
d1 = int(input("dado1:"))
d2 = int(input("dado:"))
import math
a = ((5*d1)**(0.5)+(math.pi**(d2/3))
resto =var1- a
print(resto)
			 
		
-- ERROR:
File "XXXX", line 7
    resto =var1- a
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:21:06) 
-- CODE:
import math
var1 = int(input("pontos de vida:"))
d1 = int(input("dado1:"))
d2 = int(input("dado:"))
import math
a = ((5*d1)**(0.5)+(math.pi**(d2/3))
resto =var1- a
print(resto)
			 
		
-- EXECUTION TIME:
0.135208
-- ERROR:
  File "/home/codebench/codes/1592/1802/main.py", line 7
    resto =var1- a
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:23:58) 
-- CODE:
import math
var1 = int(input("pontos de vida:"))
d1 = int(input("dado1:"))
d2 = int(input("dado:"))
import math
a = ((5*d1)**(0.5)+(math.pi**(d2/3))
resto =var1- a
print(resto)
			 
		
-- ERROR:
File "XXXX", line 7
    resto =var1- a
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:25:14) 
-- CODE:
import math
var1 = int(input("pontos de vida:"))
d1 = int(input("dado1:"))
d2 = int(input("dado:"))
import math
a = ((5*d1)**(0.5)+(math.pi**(d2/3))
resto =var1- int(a)
print(resto)
			 
		
-- ERROR:
File "XXXX", line 7
    resto =var1- int(a)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:28:38) 
-- CODE:
import math
var1 = int(input("pontos de vida:"))
d1 = int(input("dado1:"))
d2 = int(input("dado:"))
a = ((5*d1)**(0.5))+(math.pi**(d2/3))
resto =var1- int(a)
print(resto)
			 
		
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:28:46) 
-- CODE:
import math
var1 = int(input("pontos de vida:"))
d1 = int(input("dado1:"))
d2 = int(input("dado:"))
a = ((5*d1)**(0.5))+(math.pi**(d2/3))
resto =var1- int(a)
print(resto)
			 
		
-- EXECUTION TIME:
0.17061
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
